# ble_data_notifier

./: .gitignore  Cargo.toml  NOTES.md  README.md  blesense.hex  memory.x  rust-toolchain.toml  test.hex
.cargo/: config.toml
src/: main.rs
src/lib/: helpers.rs  messages.rs  mod.rs
src/lib/ble/: mod.rs  sd.rs  server.rs  services.rs
src/lib/device/: blesense.rs  micromod.rs  mod.rs  xiaoble.rs
